# dect-nr-plus-template

./: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
src/: main.c
src/dect_phy/: dect_phy.c  dect_phy.h
